Fixed vertical alignment for code-inline

--- a/src/documents/styles/my.css
+++ b/src/documents/styles/my.css
@@ -67,6 +67,7 @@ code {
   background-color: #fdf6e3;
   border: 1px solid #e1e1e8;
   font-size: 1.6rem;
+  vertical-align: text-bottom;
 }
 
 pre code.hljs {
